--- a/c_class_last/c_class_last.vcxproj.filters
+++ b/c_class_last/c_class_last.vcxproj.filters
@@ -17,14 +17,23 @@
       <UniqueIdentifier>{168e811f-e8e5-4d56-a516-b331d8e1a1f2}</UniqueIdentifier>
     </Filter>
     <Filter Include="소스 파일\day2">
-      <UniqueIdentifier>{bb9526a1-624a-446e-bbc1-53536817917a}</UniqueIdentifier>
+      <UniqueIdentifier>{0990469f-e17b-4aa9-9049-e66ef408923c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="day1.c">
       <Filter>소스 파일\day1</Filter>
     </ClCompile>
-    <ClCompile Include="day2.c">
+    <ClCompile Include="기본구조.c">
+      <Filter>소스 파일\day2</Filter>
+    </ClCompile>
+    <ClCompile Include="변수.c">
+      <Filter>소스 파일\day2</Filter>
+    </ClCompile>
+    <ClCompile Include="영어다이아몬드.c">
+      <Filter>소스 파일\day2</Filter>
+    </ClCompile>
+    <ClCompile Include="변수의출력.c">
       <Filter>소스 파일\day2</Filter>
     </ClCompile>
   </ItemGroup>
